<resources>
    <string name="app_name">NOTESZONE</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="action_settings">Settings</string>
    <string name="string_name_football_club">Sriwijaya F.C.</string>
    <string name="string_birthday_football_club">17 September 1997</string>
    <string name="string_name_speaker">Adi Suryantoro</string>
    <string name="string_name">Name</string>
    <string name="string_address">address</string>
    <string name="string_login">Login</string>
    <string name="string_save">Save</string>
    <string name="string_logout">Logout</string>
    <string name="string_detail">Detail</string>
    <string name="string_log_out">Log Out</string>
    <string name="string_about">About</string>
    <string name="string_isempty">File Notes is Empty</string>
    <string name="title_activity_add_note">Add Note</string>
    <string name="string_edit_note">Edit Note</string>
    <string name="string_delete_note">Delete Note</string>
    <string name="string_time">Dec 08, 2019, 03.00 PM</string>
    <string name="string_padepokan_asa">Padepokan ASA</string>
    <string name="string_version">V 1.0.0</string>
    <string name="string_name_adi_suryantoro">Adi Suryantoro</string>
    <string name="string_instagram_adi_suryantoro">adi_suryantoro</string>
    <string name="string_github_adisuryantoro">adisuryantoro</string>
    <string name="string_workshop_date">08 September 2019</string>
    <string name="title_activity_detail_note">Detail Note</string>
    <string name="title_activity_about">About</string>
    <string name="activity_title_update_note">Update Note</string>
</resources>
